fix(popup): scrollbar overlap

--- a/projects/docs/src/app/popups/nutmeg/nutmeg.component.scss
+++ b/projects/docs/src/app/popups/nutmeg/nutmeg.component.scss
@@ -2,7 +2,6 @@
   display        : grid;
   grid-auto-flow : row;
   grid-gap       : 20px;
-  width          : 400px;
   justify-items  : center;
   text-align     : center;
 }
